syntax = "proto3";
option go_package = "github.com/yubo/falcon/service";
package service;

import "google/api/annotations.proto";

enum Cf {
	MIN     = 0; // default
	MAX     = 1;
	AVERAGE = 2;
}

enum ItemType {
	GAUGE   = 0; // default
	DERIVE  = 1;
	COUNTER = 2;
}


message Key {
	bytes    key       = 1;
	int32    shardId   = 2;
}

message TimeValuePair {
	int64  timestamp = 1;
	double value     = 2;
}

message DataPoint {
	Key           key   = 1;
	TimeValuePair value = 2; 
}

message DataPoints {
	Key                    key = 1;
	repeated TimeValuePair values = 2; 
}

message PutRequest {
	repeated DataPoint data = 1;
}

message PutResponse {
	int32  n = 1; // Actual number of objects success process
}

message GetRequest {
	repeated Key keys  = 1;
	int64    start     = 2;
	int64    end       = 3;
	Cf       consolFun = 4; // for rrd
}

message GetResponse {
	repeated DataPoints data = 1;
}

message Empty {
}

message Stats {
	repeated uint64 counter = 1;
}

message StatsName {
	repeated bytes counterName = 1;
}

service Service {
	rpc Put(PutRequest) returns (PutResponse) {
		/*
		option (google.api.http) = {
			post: "/v1.0/put"
			body: "*"
		};
		*/
	}

	rpc Get(GetRequest) returns (GetResponse) {
		/*
		option (google.api.http) = {
			post: "/v1.0/get"
			body: "*"
		};
		*/
	}

	rpc GetStats(Empty) returns (Stats) {
		option (google.api.http) = {
			get: "/v1.0/stats"
		};
	};

	rpc GetStatsName(Empty) returns (StatsName) {
		option (google.api.http) = {
			get: "/v1.0/stats_name"
		};
	};
}

